--- a/views/product_template_views.xml
+++ b/views/product_template_views.xml
@@ -1,11 +1,11 @@
 <odoo>
     <data>
-        <record id="product_template_view_sequence" model="ir.ui.view">
+        <record id="product_template_sequence_view" model="ir.ui.view">
             <field name="name">product.template.product.form</field>
             <field name="model">product.template</field>
             <field name="mode">primary</field>
             <field name="priority" eval="8" />
-            <field name="inherit_id" ref="product.product_template_form_view"/>
+            <field name="inherit_id" ref="product_template_only_form_view"/>
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='attribute_id']" position="before">
                     <field name="sequence" widge="handle"/>
