--- a/views/product_template_views.xml
+++ b/views/product_template_views.xml
@@ -5,7 +5,7 @@
             <field name="model">product.template</field>
             <field name="mode">primary</field>
             <field name="priority" eval="8" />
-            <field name="inherit_id" ref="product_template_only_form_view"/>
+            <field name="inherit_id" ref="product.product_template_only_form_view"/>
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='attribute_id']" position="before">
                     <field name="sequence" widget="handle"/>
